--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         </ul>
                     </div>
                 </div>
-                <div>
+                <div class="ntc">
                     <div class="myaccounts">
                         <h4>NEWSLETTER</h4>
                     </div>
